syntax = "proto3";

package lawnmower;

// =============================
// 基础信息类型
// =============================

// 二维坐标
message Vector2 {
    float x = 1; // 坐标X（像素单位）
    float y = 2; // 坐标Y（像素单位）
}

message Timestamp {
  uint64 server_time = 1; // 服务器时间戳（ms）
  uint32 tick = 2; // 游戏帧编号
}

// 场景信息
message SceneInfo {
  uint32 scene_id = 1;     // 场景/关卡ID，默认与房间ID一致
  uint32 width = 2;        // 场景宽度（像素）
  uint32 height = 3;       // 场景高度（像素）
  uint32 tick_rate = 4;    // 逻辑帧率（帧/秒）
  uint32 state_sync_rate = 5; // 状态同步频率（次/秒）
}

// =============================
// 消息类型枚举
// =============================

enum MessageType{
  MSG_UNKNOWN = 0; // 未知信息

  // 登陆相关
  MSG_C2S_LOGIN = 1; // C2S 登陆
  MSG_S2C_LOGIN_RESULT = 2;  // S2C 登陆反馈
  MSG_C2S_HEARTBEAT = 3; // C2S 心跳信息
  MSG_S2C_HEARTBEAT = 4; // S2C 心跳信息

  // 房间相关
    // 客户端to服务器
  MSG_C2S_CREATE_ROOM = 10; // 创建房间请求
  MSG_C2S_GET_ROOM_LIST = 11; // 获取房间列表请求
  MSG_C2S_JOIN_ROOM = 12; // 加入房间请求
  MSG_C2S_LEAVE_ROOM = 13; // 离开房间请求
  MSG_C2S_SET_READY = 14; // 设置准备状态请求
  MSG_C2S_START_GAME = 15; // 开始游戏请求
  MSG_C2S_REQUEST_QUIT = 16; // 关闭连接请求
	
    // 服务器to客户端
  MSG_S2C_CREATE_ROOM_RESULT = 20; // 创建房间反馈
  MSG_S2C_ROOM_LIST = 21; // 房间列表反馈
  MSG_S2C_JOIN_ROOM_RESULT = 22; // 加入房间反馈
  MSG_S2C_LEAVE_ROOM_RESULT = 23; // 离开房间反馈
  MSG_S2C_SET_READY_RESULT = 24; // 设置准备状态反馈
  MSG_S2C_ROOM_UPDATE = 25; // 房间信息更新（广播)
  MSG_S2C_GAME_START = 26; // 游戏开始反馈 (广播)

  // 游戏相关
  MSG_C2S_PLAYER_INPUT = 30; // C2S 玩家信息输入
  MSG_S2C_GAME_STATE_SYNC = 40; // 广播：反馈游戏状态
  MSG_S2C_PLAYER_HURT = 41; // 广播： 玩家受伤
  MSG_S2C_ENEMY_DIED = 42; // 广播： 敌人死亡
  MSG_S2C_PLAYER_LEVEL_UP = 43; // 广播： 玩家升级
  MSG_S2C_DROPPED_ITEM = 44; // 广播： 掉落道具
  MSG_S2C_GAME_OVER = 45; // 广播： 游戏结束
  MSG_S2C_GAME_STATE_DELTA_SYNC = 46; // 广播：高频 Delta 同步（仅变化字段）
  MSG_S2C_PROJECTILE_SPAWN = 47; // 广播： 发射射弹（如豌豆）
  MSG_S2C_PROJECTILE_DESPAWN = 48; // 广播： 射弹消失（命中/超界/过期）
  MSG_S2C_ENEMY_ATTACK_STATE_SYNC = 49; // 广播： 敌人攻击状态变化（用于客户端播放/停止攻击动画）
  MSG_S2C_UPGRADE_REQUEST = 50; // 服务器->客户端：升级请求
  MSG_C2S_UPGRADE_REQUEST_ACK = 51; // 客户端->服务器：升级请求确认
  MSG_S2C_UPGRADE_OPTIONS = 52; // 服务器->客户端：升级选项内容
  MSG_C2S_UPGRADE_OPTIONS_ACK = 53; // 客户端->服务器：升级选项接收确认
  MSG_C2S_UPGRADE_SELECT = 54; // 客户端->服务器：升级选择
  MSG_S2C_UPGRADE_SELECT_ACK = 55; // 服务器->客户端：升级选择确认
  MSG_C2S_UPGRADE_REFRESH_REQUEST = 56; // 客户端->服务器：刷新升级选项请求
  MSG_C2S_RECONNECT_REQUEST = 57; // 客户端->服务器：重连请求
  MSG_S2C_RECONNECT_ACK = 58; // 服务器->客户端：重连确认
}   

// =============================
// 登陆相关信息
// =============================

// 客户端 -> 服务器： 登陆请求
message C2S_Login {
    string player_name = 1; // 玩家名
}

// 服务器 -> 客户端： 登陆结果
message S2C_LoginResult {
    bool success = 1; // 登陆结果
    uint32 player_id= 2; // 玩家ID
    string message_login = 3; // 信息
    string session_token = 4; // 会话令牌（后续 UDP/重连校验）
}

// 客户端 -> 服务器： 心跳消息
message C2S_Heartbeat {
  uint64 timestamp = 1; // 时间戳
}

// 服务器 -> 客户端： 心跳消息
message S2C_Heartbeat {
  uint64 timestamp = 1; // 时间戳
  uint32 online_players = 2; // 在线玩家个数
}

// 客户端 -> 服务器：重连请求
message C2S_ReconnectRequest {
  uint32 player_id = 1; // 玩家ID
  uint32 room_id = 2; // 房间ID
  string session_token = 3; // 会话令牌（可为空，由服务器回填）
  uint32 last_input_seq = 4; // 客户端最后确认输入序号
  uint32 last_server_tick = 5; // 客户端最后看到的服务器 tick
}

// 服务器 -> 客户端：重连确认
message S2C_ReconnectAck {
  bool success = 1; // 是否成功
  string message = 2; // 结果说明
  uint32 player_id = 3; // 玩家ID
  uint32 room_id = 4; // 房间ID
  uint32 server_tick = 5; // 服务器当前 tick
  bool is_playing = 6; // 房间是否处于游戏中
  bool is_paused = 7; // 游戏是否暂停（升级流程）
  string session_token = 8; // 会话令牌（可选刷新）
}

// =============================
// 房间相关信息
// =============================

// 房间信息
message RoomInfo {
  uint32 room_id = 1; // 房间id
  string room_name = 2; // 房间名
  uint32 current_players = 3; // 当前玩家数
  uint32 max_players = 4; // 最大玩家数
  bool is_playing = 5; // 是否游戏中
  string host_name = 6; // 房主名称
}

// 房间内玩家信息
message PlayerInfo {
  uint32 player_id = 1; // 玩家id
  string player_name = 2; // 玩家姓名
  bool is_ready = 3; // 是否准备
  bool is_host = 4; // 是否房主
}

// --------------客户端->服务器--------------

// 创建房间请求
message C2S_CreateRoom {
  string room_name = 1; // 房间名
  uint32 max_players = 2; // 最大玩家数量
}

// 获取房间列表请求
message C2S_GetRoomList {
}

// 加入房间请求
message C2S_JoinRoom {
  uint32 room_id = 1; //房间id
}

// 离开房间请求
message C2S_LeaveRoom {
}

// 设置准备状态请求
message C2S_SetReady {
  bool is_ready = 1; // 是否准备
}

// 开始游戏请求（房主)
message C2S_StartGame {
}

// --------------服务器->客户端--------------

// 创建房间反馈
message S2C_CreateRoomResult {
  bool success = 1; // 是否创建成功
  uint32 room_id = 2; // 房间id
  string message_create = 3; // 信息
}

// 房间列表反馈
message S2C_RoomList {
  repeated RoomInfo rooms = 1; // 所有房间信息, 房间容器
}

// 加入房间反馈
message S2C_JoinRoomResult {
  bool success = 1; // 是否加入成功
  string message_join = 2; // 信息
}

// 离开房间反馈
message S2C_LeaveRoomResult {
  bool success = 1; // 是否离开成功
  string message_leave = 2; // 信息
}

// 设置准备状态反馈
message S2C_SetReadyResult {
  bool success = 1; // 是否设置成功
  uint32 room_id = 2; // 房间id
  bool is_ready = 3; // 当前准备状态
  string message_ready = 4; // 信息
}

// 房间信息更新(广播)
message S2C_RoomUpdate {
  uint32 room_id = 1; // 房间id
  repeated PlayerInfo players = 2; // 当前房间内所有玩家, 玩家容器
}

// 游戏开始反馈(广播)
message S2C_GameStart {
  uint32 room_id = 1; // 房间id
  uint64 start_time = 2; // 游戏开始时间戳
  bool success = 3; // 是否开始成功（失败则仅回给发起者）
  string message_start = 4; // 开始结果说明
  SceneInfo scene = 5; // 场景信息（开始成功时有效）
}

// =============================
// 游戏相关信息
// =============================

// --------------游戏状态------------------

// 玩家状态（网络同步核心数据）
message PlayerState {
    uint32 player_id = 1;          // 玩家唯一ID
    Vector2 position = 2;          // 位置
    float rotation = 3;            // 朝向（角度，单位：度）
    int32 health = 4;              // 当前血量
    int32 max_health = 5;          // 最大血量
    uint32 level = 6;               // 等级
    uint32 exp = 7;                 // 当前经验
    uint32 exp_to_next = 8;         // 升级所需经验
    bool is_alive = 9;             // 是否存活
    uint32 attack = 10;             // 基础攻击力
    bool is_friendly = 11;         // 是否为友方（通常玩家为 true）
    uint32 role_id = 12;           // 角色ID（预留，如豌豆射手、向日葵等）
    uint32 critical_hit_rate = 13;  // 暴击率（单位：‰ 或 %，由客户端解释）
    bool has_buff = 14;            // 是否有灌注/增益效果
    uint32 buff_id = 15;           // Buff ID（0 表示无）
    uint32 attack_speed = 16;       // 攻击速度（数值越大越快，或表示攻击间隔 ms）
    float move_speed = 17;          // 移动速度（像素/秒）
    int32 last_processed_input_seq = 18; // 玩家客户端最后一次输入码的序号
}

// 升级原因
enum UpgradeReason {
    UPGRADE_REASON_UNKNOWN = 0;
    UPGRADE_REASON_LEVEL_UP = 1; // 升级触发
    UPGRADE_REASON_REFRESH = 2;  // 刷新触发
}

// 升级类型
enum UpgradeType {
    UPGRADE_TYPE_UNKNOWN = 0;
    UPGRADE_TYPE_MOVE_SPEED = 1;    // 移速
    UPGRADE_TYPE_ATTACK = 2;        // 攻击
    UPGRADE_TYPE_ATTACK_SPEED = 3;  // 攻速
    UPGRADE_TYPE_MAX_HEALTH = 4;    // 最大血量
    UPGRADE_TYPE_CRITICAL_RATE = 5; // 暴击率
}

// 升级等级
enum UpgradeLevel {
    UPGRADE_LEVEL_UNKNOWN = 0;
    UPGRADE_LEVEL_LOW = 1;
    UPGRADE_LEVEL_MEDIUM = 2;
    UPGRADE_LEVEL_HIGH = 3;
}

// 升级效果
message UpgradeEffect {
    UpgradeType type = 1;   // 升级类型
    UpgradeLevel level = 2; // 升级等级
    int32 value = 3;        // 升级数值
}

// 升级选项（一个选项可包含多个效果）
message UpgradeOption {
    uint32 option_index = 1;          // 选项索引（0-based）
    repeated UpgradeEffect effects = 2; // 升级效果列表
}

// 射弹信息（如豌豆、子弹）
message Projectile {
    uint32 speed = 1;               // 飞行速度（像素/秒）
    bool has_buff = 2;             // 是否携带 Buff 效果
    uint32 buff_id = 3;            // Buff ID
    bool is_friendly = 4;          // 是否为友方射弹
    uint32 damage = 5;              // 总伤害（服务端计算后下发）
}

// 射弹实例状态（用于发射/消失事件；方案二不做逐帧同步，由客户端本地模拟飞行）
message ProjectileState {
    uint32 projectile_id = 1;      // 射弹实例ID（运行时生成）
    uint32 owner_player_id = 2;    // 发射者玩家ID
    Vector2 position = 3;          // 发射时位置（像素）
    float rotation = 4;            // 发射方向（角度，单位：度）
    uint32 ttl_ms = 5;             // 生存时间（ms，客户端用于本地回收）
    Projectile projectile = 6;     // 射弹属性（速度/伤害/buff 等）
}

enum ProjectileDespawnReason {
    PROJECTILE_DESPAWN_UNKNOWN = 0;
    PROJECTILE_DESPAWN_HIT = 1;          // 命中后消失
    PROJECTILE_DESPAWN_OUT_OF_BOUNDS = 2; // 飞出地图
    PROJECTILE_DESPAWN_EXPIRED = 3;       // 超时回收
}

message ProjectileDespawn {
    uint32 projectile_id = 1;                // 射弹实例ID
    ProjectileDespawnReason reason = 2;      // 消失原因
    uint32 hit_enemy_id = 3;                 // 命中的敌人ID（无则为0）
    Vector2 position = 4;                    // 消失位置（像素，用于特效）
}

// 敌人状态
message EnemyState {
    uint32 enemy_id = 1;           // 敌人实例ID（运行时生成）
    uint32 type_id = 2;            // 敌人类型ID（关联 EnemyConfig）
    Vector2 position = 3;          // 位置
    int32 health = 4;              // 当前血量
    int32 max_health = 5;          // 最大血量
    bool is_alive = 6;             // 是否存活
    uint32 wave_id = 7;            // 所属波次
    bool is_friendly = 8;          // 是否为友方（通常为 false，除非有召唤机制）
}

// 道具效果类型
enum ItemEffectType {
    ITEM_EFFECT_NONE = 0;   // 无效果/未定义
    ITEM_EFFECT_HEAL = 1;   // 回血
    ITEM_EFFECT_EXP = 2;    // 经验
    ITEM_EFFECT_SPEED = 3;  // 加速
}

// 掉落物状态
message ItemState {
    uint32 item_id = 1;            // 道具实例ID
    uint32 type_id = 2;            // 道具类型ID
    Vector2 position = 3;          // 位置
    bool is_picked = 4;            // 是否已被拾取
}

// 道具字段级增量掩码
enum ItemDeltaMask {
  ITEM_DELTA_NONE = 0;
  ITEM_DELTA_POSITION = 1;   // 位置更新
  ITEM_DELTA_IS_PICKED = 2;  // 拾取状态更新
  ITEM_DELTA_TYPE = 4;       // 类型更新
}

// =============================
// 高频 Delta 同步（仅变化字段）
// =============================

// PlayerStateDelta / EnemyStateDelta 使用 changed_mask + optional 字段来表达“只更新部分字段”：
// - changed_mask 用位图表示本消息携带了哪些字段，便于快速分支处理
// - optional 允许字段即使为默认值（例如 0/false）也能表达“确实被更新/清空”
//
// 注意：Vector2 等 message 类型在 proto3 天生具有 presence（可通过 has_xxx 判断）

enum PlayerDeltaMask {
  PLAYER_DELTA_NONE = 0;
  PLAYER_DELTA_POSITION = 1;                 // 位置更新
  PLAYER_DELTA_ROTATION = 2;                 // 朝向更新
  PLAYER_DELTA_IS_ALIVE = 4;                 // 存活状态更新
  PLAYER_DELTA_LAST_PROCESSED_INPUT_SEQ = 8; // 输入确认序号更新
}

enum EnemyDeltaMask {
  ENEMY_DELTA_NONE = 0;
  ENEMY_DELTA_POSITION = 1;  // 位置更新
  ENEMY_DELTA_HEALTH = 2;    // 血量更新（可选）
  ENEMY_DELTA_IS_ALIVE = 4;  // 存活状态更新
}

// 高频玩家状态增量（主要用于 UDP 高频同步）
message PlayerStateDelta {
  uint32 player_id = 1;
  uint32 changed_mask = 2;

  Vector2 position = 3;
  optional float rotation = 4;
  optional bool is_alive = 5;
  optional int32 last_processed_input_seq = 6;
}

// 高频敌人状态增量（主要用于 UDP 高频同步）
message EnemyStateDelta {
  uint32 enemy_id = 1;
  uint32 changed_mask = 2;

  Vector2 position = 3;
  optional int32 health = 4;
  optional bool is_alive = 5;
}

// 高频道具状态增量（主要用于 UDP 高频同步）
message ItemStateDelta {
  uint32 item_id = 1;
  uint32 changed_mask = 2;

  Vector2 position = 3;
  optional bool is_picked = 4;
  optional uint32 type_id = 5;
}

// 高频同步包：包含玩家/敌人/道具的增量（字段级增量或变更列表）
message S2C_GameStateDeltaSync {
  Timestamp sync_time = 1;
  uint32 room_id = 2;

  repeated PlayerStateDelta players = 3;
  repeated EnemyStateDelta enemies = 4;
  repeated ItemStateDelta items = 5; // 道具状态增量（仅包含变化的道具）
}

// --------------客户端->服务器--------------

// 玩家输入
message C2S_PlayerInput {
    uint32 player_id = 1;          // 玩家唯一ID
    Vector2 move_direction = 2;    // 移动方向（归一化向量）
    bool is_attacking = 3;         // 是否正在攻击
    Timestamp input_time = 4;      // 输入时间戳（用于延迟补偿）
    uint32 input_seq = 5;          // 输入序号（客户端递增，用于去重/乱序处理）
    uint32 delta_ms = 6;           // 距上一次输入的时间间隔（ms，客户端估算，0 表示未知）
    string session_token = 7;      // 会话令牌（登录后下发，用于 UDP 鉴权）
}

// --------------服务器->客户端--------------

// 游戏状态同步（定期发送，如每秒20次）
message S2C_GameStateSync {
  Timestamp sync_time = 1;
  repeated PlayerState players = 2;            // 变化的玩家状态,容器
  repeated EnemyState enemies = 3;             // 变化的敌人状态,容器
  repeated ItemState items = 4;                // 道具状态（如新掉落或被拾取）,容器
  uint32 room_id = 5;                          // 所属房间ID（便于客户端路由/校验）
  bool is_full_snapshot = 6;                   // 是否为全量快照（true=全量，false=变化集合）
}

// 射弹发射广播：客户端据此创建本地射弹并模拟飞行
message S2C_ProjectileSpawn {
  Timestamp sync_time = 1;
  uint32 room_id = 2;
  repeated ProjectileState projectiles = 3;
}

// 射弹消失广播：客户端据此移除本地射弹（命中/超界/过期）
message S2C_ProjectileDespawn {
  Timestamp sync_time = 1;
  uint32 room_id = 2;
  repeated ProjectileDespawn projectiles = 3;
}

// =============================
// 敌人攻击状态同步（用于表现）
// =============================

// 敌人攻击状态增量：用于客户端播放/停止攻击动画（幂等状态，不依赖 start/stop 两条消息）
message EnemyAttackStateDelta {
  uint32 enemy_id = 1;         // 敌人实例ID
  bool is_attacking = 2;       // 是否处于攻击状态（通常表示“与玩家接触/在攻击范围内”）
  uint32 target_player_id = 3; // 攻击目标玩家ID（无则为0；用于朝向/特效绑定）
}

// 敌人攻击状态同步包：只包含“发生变化”的敌人（delta）
message S2C_EnemyAttackStateSync {
  Timestamp sync_time = 1;
  uint32 room_id = 2;
  repeated EnemyAttackStateDelta enemies = 3;
}

// 玩家受伤广播
message S2C_PlayerHurt {
  uint32 player_id = 1;        // 受伤玩家ID
  uint32 damage = 2;           // 扣除的伤害值
  int32 remaining_health = 3;  // 受伤后的血量
  uint32 source_id = 4;        // 伤害来源ID（玩家或敌人）
}

// 敌人死亡广播
message S2C_EnemyDied {
  uint32 enemy_id = 1;          // 死亡的敌人实例ID
  uint32 killer_player_id = 2;  // 造成击杀的玩家ID
  uint32 wave_id = 3;           // 敌人所属波次
  Vector2 position = 4;         // 死亡位置，用于播放特效
}

// 玩家升级广播
message S2C_PlayerLevelUp {
  uint32 player_id = 1;      // 升级玩家ID
  uint32 new_level = 2;      // 新等级
  uint32 exp_to_next = 3;    // 升级后到下一级所需经验
}

// 升级请求（服务端发起）
message S2C_UpgradeRequest {
  uint32 room_id = 1;      // 房间ID
  uint32 player_id = 2;    // 触发升级的玩家ID
  UpgradeReason reason = 3; // 升级触发原因
}

// 升级请求确认（客户端回执）
message C2S_UpgradeRequestAck {
  uint32 room_id = 1;   // 房间ID
  uint32 player_id = 2; // 玩家ID
}

// 升级选项内容（服务端下发）
message S2C_UpgradeOptions {
  uint32 room_id = 1;          // 房间ID
  uint32 player_id = 2;        // 触发升级的玩家ID
  UpgradeReason reason = 3;    // 升级触发原因
  repeated UpgradeOption options = 4; // 升级选项
  uint32 refresh_remaining = 5; // 剩余刷新次数
}

// 升级选项接收确认（客户端回执）
message C2S_UpgradeOptionsAck {
  uint32 room_id = 1;   // 房间ID
  uint32 player_id = 2; // 玩家ID
}

// 升级选择（客户端发送）
message C2S_UpgradeSelect {
  uint32 room_id = 1;     // 房间ID
  uint32 player_id = 2;   // 玩家ID
  uint32 option_index = 3; // 选项索引（0-based）
}

// 升级选择确认（服务端回执）
message S2C_UpgradeSelectAck {
  uint32 room_id = 1;     // 房间ID
  uint32 player_id = 2;   // 玩家ID
  uint32 option_index = 3; // 选项索引（0-based）
}

// 刷新升级选项请求（客户端发送）
message C2S_UpgradeRefreshRequest {
  uint32 room_id = 1;   // 房间ID
  uint32 player_id = 2; // 玩家ID
}

// 道具掉落广播
message S2C_DroppedItem {
  repeated ItemState items = 1;   // 新掉落的道具列表,容器
  uint32 source_enemy_id = 2;     // 触发掉落的敌人实例ID（无则为0）
  uint32 wave_id = 3;             // 掉落所属波次（无则为0）
  Timestamp sync_time = 4;        // 事件时间戳
  uint32 room_id = 5;             // 房间ID（便于路由/校验）
}

// 玩家得分反馈
message PlayerScore {
  uint32 player_id = 1; // 玩家id
  string player_name = 2; // 玩家名称
  int32 final_level = 3; // 最终等级
  int32 kill_count = 4; // 击杀数量
  int32 damage_dealt = 5; // 总伤害
}

// 游戏结束反馈
message S2C_GameOver {
  bool victory = 1; // 是否胜利
  uint32 survive_time = 2; // 存活时间
  repeated PlayerScore scores = 3; // 所有玩家得分,容器
}

// —————— 以下为配置类（仅客户端/服务端本地加载，不通过网络传输）——————

// 敌人配置（静态数据）
message EnemyConfig {
    uint32 type_id = 1;            // 与 EnemyState.type_id 对应
    string name = 2;               // 名称（如 "普通僵尸"）
    string texture_id = 3;         // 贴图资源ID（如 "zombie_normal"）
    string walk_anim_id = 4;       // 行走动画ID
    string die_anim_id = 5;        // 死亡动画ID
    int32 max_health = 6;          // 最大血量（用于服务端生成）
    float speed = 7;               // 移动速度（像素/秒）
    uint32 damage = 8;              // 单次伤害
    uint32 exp_reward = 9;          // 击杀后奖励经验
}

// =============================
// 网络包封装
// =============================

// 网络消息封装（通用包格式）
message Packet {
    MessageType msg_type = 1;           // 消息类型（使用 MessageType 枚举值）
    bytes payload = 2;             // 序列化后的具体消息内容
}
